--- a/app/src/main/res/layout/fragment_actions.xml
+++ b/app/src/main/res/layout/fragment_actions.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".fragment.ActionsFragment">
 
+
     <ListView
         android:id="@+id/recipe_list_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         tools:layout_constraintBottom_toBottomOf="parent"
         tools:layout_constraintEnd_toEndOf="parent"
         tools:layout_constraintStart_toStartOf="parent"
