--- a/app/src/main/res/layout/fragment_inbox.xml
+++ b/app/src/main/res/layout/fragment_inbox.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.InboxFragment">
+    tools:context=".fragment.inbox.InboxFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
