--- a/app/src/main/res/layout/inbox_fragment_list_view.xml
+++ b/app/src/main/res/layout/inbox_fragment_list_view.xml
@@ -8,12 +8,9 @@
 
     <ListView
         android:id="@+id/recipe_list_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_constraintEnd_toEndOf="parent"
-        tools:layout_constraintStart_toStartOf="parent"
-        tools:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+         />
 
 
 </FrameLayout>
