--- a/app/src/main/res/layout/inbox_list_view_items.xml
+++ b/app/src/main/res/layout/inbox_list_view_items.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardBackgroundColor="@color/colorAccent">
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    app:cardBackgroundColor="@color/colorPrimary"
+    android:clickable="true"
+    android:focusable="true">
 
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="description"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp" />
 
-
-        <TextView
-            android:id="@+id/description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="description"
-            android:textSize="16sp" />
-
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/three_dots"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="right"
-            android:src="@drawable/ic_baseline_more_vert_24" />
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/three_dots"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="right"
+        android:src="@drawable/ic_baseline_more_vert_24" />
 
 
 </com.google.android.material.card.MaterialCardView>
