Add Move to action from inbox fragment

--- a/app/src/main/res/menu/inbox_menu_pop_up_action_list.xml
+++ b/app/src/main/res/menu/inbox_menu_pop_up_action_list.xml
@@ -3,19 +3,10 @@
     <item
         android:id="@+id/menu_to_action"
         android:icon="@drawable/ic_baseline_inbox_24"
-        android:title="Open" />
-    <item
-        android:id="@+id/menu__to_agenda"
-        android:icon="@drawable/ic_baseline_inbox_24"
-        android:title="Open" />
+        android:title="Move to Action" />
     <item
         android:id="@+id/menu_to_project"
         android:icon="@drawable/ic_baseline_inbox_24"
-        android:title="Open" />
-
-    <item
-        android:id="@+id/menu_create_project"
-        android:icon="@drawable/ic_baseline_inbox_24"
-        android:title="Open" />
+        android:title="Create a project" />
 
 </menu>
