--- a/app/src/main/res/layout/inbox_fragment_list_view.xml
+++ b/app/src/main/res/layout/inbox_fragment_list_view.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.actions.ActionsFragment">
+    tools:context=".presentation.fragment.actions.ActionsFragment">
 
 
     <ListView
