--- a/app/src/main/res/layout/action_list_view_items.xml
+++ b/app/src/main/res/layout/action_list_view_items.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    app:cardBackgroundColor="@color/colorPrimary"
+    app:cardBackgroundColor="@color/design_default_color_error"
     android:clickable="true"
     android:focusable="true">
 
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="description"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/cardview_light_background"
         android:textSize="18sp" />
 
     <androidx.appcompat.widget.AppCompatImageButton
