--- a/app/src/main/res/layout/inbox_fragment_list_view.xml
+++ b/app/src/main/res/layout/inbox_fragment_list_view.xml
@@ -5,12 +5,30 @@
     android:layout_height="match_parent"
     tools:context=".presentation.fragment.actions.ActionsFragment">
 
+    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        app:cardBackgroundColor="@color/colorPrimary"
+        android:clickable="true"
+        android:focusable="true">
+
+        <TextView
+            android:id="@+id/zeroInbox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="description"
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp" />
+
+    </com.google.android.material.card.MaterialCardView>
 
     <ListView
         android:id="@+id/recipe_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-         />
+         >
+    </ListView>
 
 
 </FrameLayout>
