--- a/app/src/main/res/menu/common_menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/common_menu_bottom_navigation.xml
@@ -9,4 +9,9 @@
         android:title="Actions"
         android:icon="@drawable/ic_baseline_double_arrow_24"
         />
+
+    <item android:id="@+id/menu_next_actions"
+        android:title="Next Actions"
+        android:icon="@drawable/ic_baseline_double_arrow_24"
+        />
 </menu>
