--- a/app/src/main/res/layout/dialog_next_action.xml
+++ b/app/src/main/res/layout/dialog_next_action.xml
@@ -6,22 +6,17 @@
     android:orientation="vertical"
     android:padding="10dp">
 
-    <EditText
-        android:id="@+id/dialogNameEt"
+    <TextView
+        android:id="@+id/dialog_text_action_item"
         android:hint="Enter Name"
         android:inputType="textPersonName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
     <EditText
-        android:id="@+id/dialogEmailEt"
-        android:hint="Enter Email"
-        android:inputType="textEmailAddress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:id="@+id/dialogPasswEt"
-        android:hint="Enter Password"
-        android:inputType="textPassword"
+        android:id="@+id/dialog_edit_text_next_action"
+        android:hint="Enter Name"
+        android:inputType="textPersonName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -30,16 +25,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center">
-        <Button
-            android:id="@+id/dialogLoginBtn"
-            android:text="Login"
-            style="@style/Base.Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/dialogCancelBtn"
-            android:text="Cancel"
-            style="@style/Base.Widget.AppCompat.Button.Colored"
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/dialog_button_create_next_action"
+            android:text="Create Next Action"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
